--- a/JS/task3/Sass/task3-2.scss
+++ b/JS/task3/Sass/task3-2.scss
@@ -78,6 +78,7 @@ body {
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
+  padding-bottom: 20%;
    .block-1 {
     flex-basis: 33.33%;
     display: flex;
