--- a/JS/task3/Sass/task-4-1.css
+++ b/JS/task3/Sass/task-4-1.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background: #29bde0;
+  background: #f0f0f0;
 }
 
 .hot {
@@ -24,6 +24,77 @@ body {
   width: 23px;
   height: 25px;
   padding: 2%;
+}
+
+.box .day {
+  width: 98%;
+  margin: 5px auto;
+  background-color: #fff;
+  border: 1px solid #c9c9c9;
+  text-align: center;
+  line-height: 50px;
+  font-size: 20px;
+  color: #29bde0;
+}
+
+.box .options {
+  width: 98%;
+  margin: 0 auto;
+  padding-bottom: 30px;
+  background: #fff;
+  border: 1px solid #cac9c9;
+  position: relative;
+}
+
+.box .options .triangle-top {
+  border: 17px solid;
+  border-color: transparent transparent #fff;
+  position: absolute;
+  left: calc(50% - 17px);
+  top: -30px;
+}
+
+.box .options .discuss {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  color: #fff;
+}
+
+.box .options .discuss .sun {
+  position: relative;
+}
+
+.box .options .discuss .sun img {
+  width: 40px;
+  padding-right: 24px;
+}
+
+.box .options .discuss .sun .kkk {
+  height: 45px;
+  position: absolute;
+  top: -36px;
+  left: 19px;
+  border-right: 1px solid #999;
+}
+
+.box .options .discuss .block-1 {
+  width: 70%;
+  height: 40px;
+  background: #24a7c6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.box .options .discuss .block-1 .triangle-left {
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  border-right: 40px solid #24a7c6;
+  position: absolute;
+  left: -19px;
 }
 
 .block {
@@ -98,7 +169,7 @@ body {
   display: none;
 }
 
-.footer {
+.footer-1 {
   position: fixed;
   z-index: 99999;
   width: 100%;
@@ -110,7 +181,7 @@ body {
   align-items: center;
 }
 
-.button {
+.button-1 {
   background-color: transparent;
   color: #ffffff;
   font-size: 17px;
@@ -119,4 +190,29 @@ body {
   background: #fbb435;
   border: 0;
   border-radius: 10px;
+  outline: none;
+}
+
+.footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  height: 80px;
+  background: #ffedc5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(103, 199, 243, 0.5);
+}
+
+.footer > button {
+  background: #fbb435;
+  border: 0;
+  color: #fff;
+  width: 45%;
+  height: 50px;
+  border-radius: 10px;
+  font-size: 24px;
+  outline: none;
+  margin: 0 10px;
 }
