--- a/JS/task3/Sass/task-4-2.scss
+++ b/JS/task3/Sass/task-4-2.scss
@@ -9,45 +9,75 @@ body {
 }
 
 
-.hot {
-    padding: 10px;
-    background: #fff;
-}
 
 
 .header {
-width: 100%;
-height: 60px;
-background: $background;
-border-bottom: 1px solid #fff;
-display: flex;
-align-items: center;
-justify-content: space-between;
-font-size: 27px;
-color: #fff;
+    width: 94%;
+    margin: 0 auto;
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+    padding: 15px 0;
+    color: #fff;
+    font-size: 18px;
+ img {
+     width: 24px;
+     height: 24px;
+ }
 
->img {
-    width: 23px;
-    height: 25px;
-    padding: 2%;
 }
+.hint {
+   background: #b9e9f5;
+   line-height: 50px;
+   display: flex;
+   align-items: center;
+   padding-left: 34px;
+   font-size: 17px;
+   position: relative;
+   >.MP3 {                                       
+    width: 100px;
+    height: 38px; 
+    position: absolute;
+    right: 12px;
+    background-color:#b9e9f5;
+    opacity:0;
+    transform:rotate(180deg); 
+}
+>.play {                                      
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    right: 15px;
+    z-index: 99999;
+    pointer-events:none;  
+}
+.triangle {                                       
+    width: 0; 
+    height: 0;
+    margin-left: 34px;
+    margin-bottom: -7px;
+    margin-top: -1px;
+    border-width: 10px 7px;
+    border-style: solid;
+    border-color:#b9e9f5 transparent transparent transparent;
+    position: absolute;
+    top: 51px;
 }
 
+}
 
-
-
-
-
-
-
-
+.hint-1 {
+ color: #fff;
+ font-size: 13px;
+ line-height: 50px;
+ padding-left: 70px;
+}
 
 .block {
   width: 94%;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  padding-top: 3%;
   padding-bottom: 20%;
    .block-1 {
     flex-basis: 33.33%;
@@ -115,7 +145,7 @@ color: #fff;
     position: fixed;
     z-index: 99999;
     width: 100%;
-    height: 80px;
+    height: 60px;
     bottom: 0;
     background: #29bde0;
     display: flex;
@@ -129,9 +159,8 @@ color: #fff;
     color:#ffffff;
     font-size: 17px;                                          
     width: 70%;
-    height: 50px;
+    height: 43.5px;
     background: #fbb435;
     border: 0;
-    border-radius: 10px;
     
 }
