--- a/JS/task3/Sass/task-4-3.css
+++ b/JS/task3/Sass/task-4-3.css
@@ -1,29 +1,72 @@
 body {
   margin: 0;
-  background: #29bde0;
-}
-
-.hot {
-  padding: 10px;
-  background: #fff;
+  background: black;
 }
 
 .header {
-  width: 100%;
-  height: 60px;
-  background: #29bde0;
-  border-bottom: 1px solid #fff;
+  width: 94%;
+  margin: 0 auto;
   display: flex;
-  align-items: center;
+  align-content: center;
   justify-content: space-between;
-  font-size: 27px;
+  padding: 15px 0;
   color: #fff;
+  font-size: 18px;
 }
 
-.header > img {
-  width: 23px;
-  height: 25px;
-  padding: 2%;
+.header img {
+  width: 24px;
+  height: 24px;
+}
+
+.hint {
+  background: #0f3c47;
+  line-height: 50px;
+  display: flex;
+  align-items: center;
+  padding-left: 34px;
+  font-size: 17px;
+  color: #fff;
+  position: relative;
+}
+
+.hint > .MP3 {
+  width: 100px;
+  height: 38px;
+  position: absolute;
+  right: 12px;
+  background-color: #b9e9f5;
+  opacity: 0;
+  transform: rotate(180deg);
+}
+
+.hint > .play {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  right: 15px;
+  z-index: 99999;
+  pointer-events: none;
+}
+
+.hint .triangle {
+  width: 0;
+  height: 0;
+  margin-left: 34px;
+  margin-bottom: -7px;
+  margin-top: -1px;
+  border-width: 10px 7px;
+  border-style: solid;
+  border-color: #0f3c47 transparent transparent transparent;
+  position: absolute;
+  top: 51px;
+}
+
+.hint-1 {
+  color: #fff;
+  font-size: 13px;
+  line-height: 50px;
+  padding-left: 70px;
 }
 
 .block {
@@ -31,7 +74,6 @@ body {
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  padding-top: 3%;
   padding-bottom: 20%;
 }
 
@@ -98,13 +140,17 @@ body {
   display: none;
 }
 
+.block-1:hover .combination {
+  display: block;
+}
+
 .footer {
   position: fixed;
   z-index: 99999;
   width: 100%;
-  height: 80px;
+  height: 60px;
   bottom: 0;
-  background: #29bde0;
+  background: black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -115,8 +161,7 @@ body {
   color: #ffffff;
   font-size: 17px;
   width: 70%;
-  height: 50px;
-  background: #fbb435;
+  height: 43.5px;
+  background: #fb3535;
   border: 0;
-  border-radius: 10px;
 }
