--- a/JS/task3/Sass/task.css
+++ b/JS/task3/Sass/task.css
@@ -135,6 +135,7 @@ body {
   justify-content: center;
   font-size: 20px;
   color: #fff;
+  position: relative;
   cursor: pointer;
 }
 
@@ -172,6 +173,17 @@ body {
   border-right: 40px solid #24a7c6;
   position: absolute;
   left: -19px;
+}
+
+.result {
+  width: 62%;
+  height: 20px;
+  position: absolute;
+  margin-left: 30px;
+  top: 100%;
+  outline: none;
+  border: none;
+  text-align: center;
 }
 
 .footer {
