--- a/JS/task3/Sass/task.scss
+++ b/JS/task3/Sass/task.scss
@@ -139,7 +139,9 @@ color: $color-f;
                 justify-content: center;
                 font-size: 20px;
                 color: $color-f;
+                position: relative;
                 cursor: pointer;
+
                 
                 .sun {
                     position: relative;
@@ -180,6 +182,21 @@ color: $color-f;
             }     
     }
 }
+
+
+
+
+.result {
+    width: 62%;
+    height: 20px;
+    position: absolute;
+    margin-left: 30px;
+    top: 100%;
+    outline: none;
+    border: none;
+    text-align: center;
+}
+
 
 
 
